# XfPolkit

./: .gitignore  AUTHORS  README  README.transifex  autogen.sh  configure.ac  nl.po
data/: Makefile.am  lxpolkit.desktop.in  lxpolkit.desktop.in.in  xfpolkit.desktop  xfpolkit.desktop.in  xfpolkit.desktop.in.in
data/ui/: Makefile.am  lxpolkit.glade  xfpolkit.glade
po/: LINGUAS  POTFILES.in  af.po  am.po  ar.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  km.po  kn.po  ko.po  lg.po  lt.po  (+31 more)
src/: Makefile.am  lxpolkit-listener.c  xfpolkit-listener.c  xfpolkit-listener.h  xfpolkit.c
src/.deps/: lxpolkit-lxpolkit-listener.Po  lxpolkit-lxpolkit.Po  xfpolkit-xfpolkit-listener.Po  xfpolkit-xfpolkit.Po  xml_purge-xml-purge.Po
